[package]
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
name = "dredd-hooks"
version = "0.1.0"

[dependencies]
bufstream = "0.1.3"
bytes = "0.4.4"
chan-signal = "0.3.0"
ctrlc = "3.0.2"
futures = "0.1.14"
serde = "1.0.0"
serde_derive = "1.0.0"
tokio-core = "0.1.9"
tokio-io = "0.1.2"
tokio-proto = "0.1.1"
tokio-service = "0.1.0"

[dependencies.serde_json]
features = ["preserve_order"]
version = "1.0.0"
