[package]
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
name = "dredd-hooks"
description = "Dredd HTTP API testing integration for Rust"
version = "0.2.0"
documentation = "https://docs.rs/dredd-hooks"
repository = "https://github.com/hobofan/dredd-hooks-rust"
keywords = ["testing", "dredd"]
categories = ["web-programming", "development-tools", "api-bindings"]
license = "MIT OR Apache-2.0"
exclude = ["test-suite/**/*"]

[dependencies]
bufstream = "0.1.3"
bytes = "0.4.4"
chan-signal = "0.3.0"
futures = "0.1.14"
serde = "1.0.0"
serde_derive = "1.0.0"
tokio-io = "0.1.2"
tokio-proto = "0.1.1"
tokio-service = "0.1.0"

[dependencies.serde_json]
features = ["preserve_order"]
version = "1.0.0"
