[package]
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
categories = ["web-programming", "development-tools", "api-bindings"]
description = "Dredd HTTP API testing integration for Rust"
documentation = "https://docs.rs/dredd-hooks"
exclude = ["test-suite/**/*"]
keywords = ["testing", "dredd"]
license = "MIT OR Apache-2.0"
name = "dredd-hooks"
repository = "https://github.com/hobofan/dredd-hooks-rust"
version = "0.3.0"

[[bin]]
name = "dredd-hooks-rust"
path = "src/bin/dredd-hooks-rust.rs"
required-features = ["binaries"]

[[bin]]
name = "cargo-dredd"
path = "src/bin/cargo-dredd.rs"
required-features = ["binaries"]

[dependencies]
bufstream = "0.1.3"
bytes = "0.4.4"
chan-signal = "0.3.0"
futures = "0.1.14"
serde = "1.0.0"
serde_derive = "1.0.0"
tokio-io = "0.1.2"
tokio-proto = "0.1.1"
tokio-service = "0.1.0"
cargo = { version = "0.20.0", optional = true }
cargo-edit = { version = "0.2.0", optional = true }
docopt = { version = "0.8.1", optional = true }

[dependencies.serde_json]
features = ["preserve_order"]
version = "1.0.0"

[features]
binaries = ["cargo", "cargo-edit", "docopt"]
